force-app/main/default/objects/Expense__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Total expense amount in Indian Rupees.</description>
    <inlineHelpText>Enter the total expense amount in INR.</inlineHelpText>
    <label>Amount (INR)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>