force-app/main/default/objects/Expense__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Doctor Expenses</relationshipLabel>
    <relationshipName>Doctor_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>