force-app/main/default/objects/Expense__c/fields/GST_Rate__c.field-meta.xml
<CustomField>
    <fullName>GST_Rate__c</fullName>
    <description>GST percentage applied to this expense (e.g. 5.00 for 5%). Auto-calculated based on category if not provided.</description>
    <inlineHelpText>GST rate: Meal=5%, Travel=5%, Accommodation 1k-7.5k=12%, Accommodation &gt;7.5k=18%, CME/Event=18%, Samples=0%</inlineHelpText>
    <label>GST Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>