force-app/main/default/objects/Expense__c/fields/IGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>IGST_Amount__c</fullName>
    <description>Integrated GST — used for inter-state transactions instead of SGST+CGST split.</description>
    <label>IGST Amount (Rs.)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>