force-app/main/default/objects/Expense__c/fields/Policy_Flag__c.field-meta.xml
<CustomField>
    <fullName>Policy_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true automatically when Amount exceeds the per-visit policy limit (default Rs.150). Triggers Finance review.</description>
    <inlineHelpText>Automatically flagged when amount exceeds policy limit.</inlineHelpText>
    <label>Policy Flag</label>
    <type>Checkbox</type>
</CustomField>