force-app/main/default/objects/Expense__c/fields/Pre_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pre_Tax_Amount__c</fullName>
    <description>Amount before GST. Calculated from total Amount and GST Rate.</description>
    <label>Pre-Tax Amount (Rs.)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>