force-app/main/default/objects/Expense__c/fields/Visit_Report__c.field-meta.xml
<CustomField>
    <fullName>Visit_Report__c</fullName>
    <description>Parent visit report this expense belongs to. Optional — expenses from bill upload may not have a linked visit.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Report</label>
    <referenceTo>Visit_Report__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>